--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-	<h1 id="heading">Hello, World!</h1>
-	<p>This page comes from a static asset stored at `public/index.html` as configured in `wrangler.jsonc`.</p>
+	<div id="app"></div>
 </body>
 
 </html>
