--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Poker Chip Calculator</title>
 
 	<script type="module" src="/src/main.tsx"></script>
+	<link href="/src/style.css" rel="stylesheet">
 </head>
 
 <body>
